# deepseek-harness

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  agentos.service.yml  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
crates/deepseek-harness-worker/: Cargo.toml
crates/deepseek-harness-worker/src/: main.rs
docs/: agent-os-integration.md  corpus-heavy-workloads.md  dispatch-integration.md  operator-guide.md  sprint-plan.md  user-guide.md
examples/: corpus-basic.json  corpus-deepseek-fake.json  corpus-jsonl-dataset.json  longform-outline.json  translation-glossary.json
scripts/: check-package-contents.mjs  install-local.sh  ocr-vision.swift  smoke-mcp.mjs  smoke-package.mjs
src/: cli.ts  corpus.ts  corpus_authoring.ts  corpus_ingest.ts  corpus_media.ts  corpus_ocr.ts  corpus_supervisor.ts  corpus_translation.ts  corpus_translation_memory.ts  corpus_translation_review.ts  corpus_validation.ts  errors.ts  index.ts  mcp.ts  paths.ts  privacy.ts  product.ts  runner.ts  store.ts  transport.ts
test/: agent-chat.test.ts  agent-protocol.test.ts  agent-store.test.ts  agent-tools.test.ts  agent-tui.test.ts  approval-budget.test.ts  corpus-approval.test.ts  corpus-authoring.test.ts  corpus-heavy-integration.test.ts  corpus-ingest.test.ts  corpus-input-boundary.test.ts  corpus-media.test.ts  corpus-ocr.test.ts  corpus-supervisor.test.ts  corpus-translation-memory.test.ts  corpus-translation-review.test.ts  corpus-translation.test.ts  corpus-validation.test.ts  (+9 more)
(+30 files in other folders)
